footer content spacing issue fixed

--- a/style.css
+++ b/style.css
@@ -458,6 +458,15 @@ main {
   .footer-heading {
     font-size: 1.3rem;
   }
+  .footer-description {
+    margin-top: 1.4rem;
+  }
+  .footer-link {
+    margin-top: 1rem;
+  }
+  .social-icons {
+    margin-top: 1rem;
+  }
   .social-icons img {
     width: 33px;
   }
